# AI-projects

./: README.md
mcp-weather-server/: README.md  host.py  pyproject.toml  weather_Israel.py
rag-project/: app.py  chat_service.py  config.py  generate_workflow_diagram.py  prepare.py  pyproject.toml  rag_workflow.html  run_prepare.cmd
rag-project/data/: kiro_PROJECT_DOCS.md
rag-project/data/Cursor/: API.md  ARCHITECTURE.md  SETUP.md
rag-project/services/: answer_service.py  retriever_service.py
rag-project/workflow/: events.py  rag_workflow.py
skill-proj/files-browser-agent/: .env.example
skill-proj/files-browser-agent/src/main/: index.ts
skill-proj/files-browser-agent/src/main/ipc/: skill-handlers.ts
skill-proj/files-browser-agent/src/main/services/: agent-tools.ts  anthropic-chat.ts  skills.ts
