[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "python-dotenv>=1.0.0",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-cohere>=0.8.0",
    "netfree-unstrict-ssl>=0.1.3",
    "llama-index-vector-stores-pinecone>=0.8.0",
    "llama-index-llms-cohere>=0.8.0",
    "nest-asyncio>=1.6.0",
]
